feat: change base test docker-compose.yml for selenium grid